<?xml version="1.0" encoding="utf-8"?>
<!-- author: Hao WAN-->
<resources>

    <string name="appname">Contact Manager</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="phone">Phone Number</string>
    <string name="email">Email</string>
    <string name="birth">Birth Date</string>
    <string name="call">CALL</string>
    <string name="text">TEXT</string>
    <string name="deletemsg">Delete the contact.</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>

    <string name="contactlist">CONTACT LIST</string>
    <string name="addlb">ADD</string>
    <string name="detaillb">DETAIL</string>
    <string name="editlb">EDIT</string>

</resources>
