<?xml version="1.0" encoding="utf-8"?>
<!-- author: Hao WAN-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/bodymargin"
    android:orientation="vertical">

    <EditText
        android:paddingTop="@dimen/bodymargin"
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fname"
        android:inputType="textPersonName" />

    <EditText
        android:paddingTop="@dimen/bodymargin"
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lname"
        android:inputType="textPersonName" />

    <EditText
        android:paddingTop="@dimen/bodymargin"
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:inputType="phone" />

    <EditText
        android:paddingTop="@dimen/bodymargin"
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:paddingTop="@dimen/bodymargin"
        android:id="@+id/birthDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/birth"
        android:inputType="date" />
</LinearLayout>