<?xml version="1.0" encoding="utf-8"?>
<!-- author: Hao WAN-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/bodymargin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/bodymargin"
        android:layout_marginTop="@dimen/bodymargin"
        android:text="@string/deletemsg"
        android:textColor="@android:color/black"
        android:textSize="@dimen/big"
        android:textStyle="bold" />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:id="@+id/dialogButtonYes"
            android:layout_margin="@dimen/bodymargin"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:id="@+id/dialogButtonNo"
            android:layout_margin="@dimen/bodymargin"/>
    </TableRow>

</LinearLayout>